feat(fullstack): sync backend & frontend, product details fixed, home search & filters working